# subs

./: .env.example  .gitignore  compose.dev.yml  compose.yml
api/: Dockerfile  alembic.ini  compose.dev.yml  mypy.ini  pyproject.toml
api/alembic/: env.py
api/migrations/versions/: 2026_01_22_0029-1c7a4c7d0758_initial.py  2026_01_30_0038-cad8f3c77236_add_plan.py  2026_01_30_0042-a12aa31faa2d_add_plan.py  2026_01_30_0049-641b2ac0897f_plan_name.py  2026_01_30_0050-f145b12a9d84_require_plan_id.py
api/src/: main.py  settings.py
api/src/api/v1/: subs.py
api/src/db/: postgres.py
api/src/services/: subs.py
api/src/tables/: __init__.py  plan.py  subscription.py
api/src/worker/: __init__.py  __main__.py
nginx/: compose.dev.yml  compose.yml  nginx.conf  nginx.subs.conf
postgres/: compose.dev.yml  compose.yml
